kubernetes/backend_cluster_ip.yml
apiVersion: v1
kind: Service
metadata:
 name: backend-clusterip-service
 namespace: techMomentum-project3
spec:
 type: ClusterIP
 ports:
   - port: 80
     targetPort: 3000
 selector:
   app: backend-app
